# Generative-AI

./: README.md  newssummarization.py  pyproject.toml  requirements.txt  runnablepassthrough.py
ChatBoots/: chatboot.py  uichatbot.py
ExtractMode_Com/: CoreUi.py  core.py
Lagchain-Learning/: Prompt_Reusable.ipynb  Prompt_template_langchain.py  Specific_Structure_Output.ipynb  Using_Chatprompttemplate.py  human_chat_with_model.py  langchaingroqchat.py
RAG_With_Project/: APP1.py  create_data_base.py  main.py
RAG_With_Project/Document_loader/: Recusive_text_spliter.py  page_loader.py  pdf_loader.py  text_base_spliter.py  token_base_spliter.py
RAG_With_Project/chroma-db/d97421d4-a606-499f-828a-cc787724fcea/: index_metadata.pickle
RAG_With_Project/chroma_db/: chroma.sqlite3
RAG_With_Project/chroma_db1/e4247e8b-7bd8-45c7-a8b8-9468a730913a/: index_metadata.pickle
RAG_With_Project/chroma_db3/: chroma.sqlite3
RAG_With_Project/vectore store/: DB_STORE.PY  Retriver_arixv.py
Runnable/: parallelrunnable.py  sequencerunnable.py
Tool_Calling/: SelftoolCreation.py  tool_binding_with_llm.py
chatmodels/: ACCESAPI_huggingface.py  chat.py  chat_model_groq.py  chat_model_huggingface.py  mistral_chat_model.py
chroma_db2/: chroma.sqlite3
embeddingmoddel/: embedding-gemini.py  hugging_face_embedding.py
